   and also for users of the Boost library. The "Shared_Ptr" class is intended
   as an alternative for those users who would like to use a "shared_ptr", but
   don't have access to one yet.
* Vectors are now used to replace all dynamically allocated arrays.       
            

Changes in detail
-----------------
Added CResizer
Added Shared_Ptr
Updated CSocket to support IPv6
Added CRebar::SizeToRect
Added CSocket::IsIPV6Supported
Added CSocket::FreeAdddrInfo
Added CSocket::GetAddrInfo
Added CSocket::GetLastError
Added CToolbar::AddButtons
Added CToolbar::AddString
Added CToolbar::AutoSize
Added CToolbar::CheckButton 
Added CToolbar::DeleteButton   
Added CToolbar::GetButton
Added CToolbar::GetButtonSize
Added CToolbar::GetButtonText
Added CToolbar::GetDisabledImageList
Added CToolbar::GetHotItem
Added CToolbar::GetImageList
Added CToolbar::GetPadding
Added CToolbar::GetRect
Added CToolbar::GetRows
Added CToolbar::GetTextRows
Added CToolbar::GetToolTips
Added CToolbar::HideButton
Added CToolbar::Indeterminate
Added CToolbar::InsertButton
Added CToolbar::IsButtonHidden
Added CToolbar::IsButtonHighlighted
Added CToolbar::IsButtonIndeterminate
Added CToolbar::IsButtonPressed
Added CToolbar::MapAccelerator
Added CToolbar::MarkButton
Added CToolbar::MoveButton
Added CToolbar::PressButton
Added CToolbar::SaveRestore
Added CToolbar::SetDisabledImageList
Added CToolbar::SetDrawTextFlags
Added CToolbar::SetExtendedStyle
Added CToolbar::SetHotImageList
Added CToolbar::SetHotItem
Added CToolbar::SetImageList
Added CToolbar::SetIndent
Added CToolbar::SetMaxTextRows
Added CToolbar::SetPadding
Added CToolbar::SetToolTips
Added CWinException::Output
Added CWinException::what
Added CWnd::SetWindowTheme
Added ::IsAeroThemed
Modified CSocket::Bind          now uses TCHAR instead of char
Modified CSocket::Connect       now uses TCHAR instead of char
Modified CSocket::Receive       now uses TCHAR instead of char
Modified CSocket::ReceiveFrom   now uses TCHAR instead of char